removes provider_id and location from seeker apply, status and cancel  payload and updates swagger
