# bap/backend/pkg/types/payload/onest/select/request/request.go
@@ -4,11 +4,7 @@ import "time"
 
 type SeekerSelectPayload struct {
 	WorkerID string              `json:"worker_id,omitempty"`
-	ProviderID string            `json:"provider_id,omitempty"`
 	JobID    string              `json:"job_id,omitempty"`
-	BppID   string              `json:"bpp_id,omitempty"`
-	BppURI  string              `json:"bpp_uri,omitempty"`
-	Location SelectedJobLocation `json:"location,omitempty"`
 }
 
 type SelectedJobLocation struct {
